<resources>
    <string name="app_name">CheckMeet</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_view_meetings">ViewMeetingsActivity</string>

    <string name="no_meetings_found">No meetings found.</string>
    <string name="no_contacts_found">No contacts found.</string>
    <string name="no_groups_found">No groups found.</string>
    <string name="meeting_title">Meeting Title</string>
    <string name="meeting_month">JAN</string>
    <string name="meeting_date_of_month">20</string>
    <string name="meeting_year">2017</string>
    <string name="meeting_date">January 20, 2017</string>
    <string name="meeting_time">01:30 PM - 02:30 PM</string>
    <string name="meeting_location">Gokongwei Hall, Taft Avenue, Manila, NCR</string>
    <string name="meeting_host_name">Juan Dela Cruz</string>
    <string name="meeting_hosted_by">Hosted By:</string>
    <string name="meeting_description">
        Come with us on our first General Assembly.
        It will be full of games, foods, and prizes. See you!
    </string>
    <string name="meeting_members">
        Hazel Anne Brosas \n
        Mavic Reccion \n
        Nicolle Magpale \n
        Courtney Ngo
    </string>

    <string name="group_members">
        Hazel Anne Brosas, Mavic Reccion, Nicolle Magpale, Courtney Ngo
    </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="popup_edit">Edit</string>
    <string name="popup_delete">Delete</string>
    <string name="popup_cancel">Cancel Meeting</string>
    <string name="popup_open_notes">Open Notes</string>
    <string name="title_activity_choose_location">Map</string>
    <string name="title_activity_view_location">Map</string>
</resources>
