<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container_meeting_item"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="128dp"
    android:layout_marginBottom="8dp"
    android:layout_marginRight="8dp"
    android:background="@drawable/background_with_shadow">

    <android.support.percent.PercentFrameLayout
        android:id="@+id/background_date_meeting"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="1dp"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_widthPercent="25%"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meeting_month"
                android:gravity="center"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"
                android:textColor="#3e3e3e"/>

            <TextView
                android:id="@+id/tv_day_of_month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meeting_date_of_month"
                android:textSize="32sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="#3e3e3e"/>

            <TextView
                android:id="@+id/tv_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meeting_year"
                android:gravity="center"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"
                android:textColor="#3e3e3e"/>

        </LinearLayout>

    </android.support.percent.PercentFrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/iv_options_menu_meeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_more_vert_black_24dp"
            android:layout_gravity="end"
            android:tint="#a9a9a9"
            android:visibility="gone"
            android:padding="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingLeft="8dp">

            <TextView
                android:id="@+id/tv_title_meeting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meeting_title"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="#000"
                android:textSize="20sp"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_access_time_black_24dp"
                    android:tint="@color/colorPrimaryDark"/>

                <TextView
                    android:id="@+id/tv_time_meeting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meeting_time"
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_location_on_black_24dp"
                    android:tint="@color/colorPrimaryDark"/>

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/meeting_location"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="8dp"
                    android:layout_gravity="center"
                    android:maxLines="1"
                    android:ellipsize="end"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:paddingRight="8dp"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meeting_hosted_by"
                android:layout_marginRight="5dp"
                android:textSize="12sp"
                android:textColor="#bababa"
                android:gravity="end"/>

            <TextView
                android:id="@+id/tv_host_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="#bababa"
                android:text="@string/meeting_host_name"/>

        </LinearLayout>

    </FrameLayout>

</LinearLayout>